--- a/index.html
+++ b/index.html
@@ -7,10 +7,38 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>TouhinTechnical - Influencer Startup Landing Page</title>
+    <!-- Font-awesome Link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Css Link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Header Part Start -->
+    <header class="header_section_m">
+        <div class="container">
+            <div class="row">
+                <div class="menu_area">
+                    <div class="logo">
+                        <h2 class="logo_title">Influencer Startup</h2>
+                    </div> <!-- logo -->
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">products</a></li>
+                            <li><a href="#">signup</a></li>
+                            <li><a href="#">login</a></li>
+                        </ul>
+                        <span class="serach_icon mr-34"><i class="fas fa-search"></i></span>
+                        <span class="addTo_cart">
+                            <a href="#">
+                                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+                            </a>
+                        </span>
+                    </div> <!-- Menu -->
+                </div> <!-- Menu_area -->
+            </div> <!-- Row -->
+        </div> <!-- Container -->
+    </header> <!-- Header_section_m -->
+    <!-- Header Part End -->
 </body>
 </html>
