Banner part created

--- a/index.html
+++ b/index.html
@@ -40,5 +40,26 @@
         </div> <!-- Container -->
     </header> <!-- Header_section_m -->
     <!-- Header Part End -->
+    <!-- Header_banner Part Start -->
+    <section class="h_banner_section">
+        <div class="container">
+            <div class="row">
+                <div class="banner_content">
+                    <div class="banner_text">
+                        <h1 class="banner_title">Start your Journey as Influencer</h1>
+                        <p class="banner_para">Of course everyone's audience is different, but I know that sharing humor and staying relatable is what increases the likelihood of success for my captions.</p>
+                        <a href="#" class="banner_btn btn">pre-order now <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                    <div class="banner_img">
+                        <img src="img/product/main-camera.png" alt="camrea">
+                        <!-- <div class="circle_1"></div>
+                        <div class="circle_2"></div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Header_banner Part End -->
+
 </body>
 </html>
