Brand part created

--- a/index.html
+++ b/index.html
@@ -61,5 +61,36 @@
     </section>
     <!-- Header_banner Part End -->
 
+    <!-- Brand section Part Start -->
+    <section class="brand_section">
+        <div class="container">
+            <div class="row">
+                <div class="brand_content">
+                    <div class="brand_item">
+                        <img src="img/logos/Alibaba.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Amazon.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Daraz.pk Logo.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Ebay.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Rakuten.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Target.svg" alt="Brand Logo">
+                    </div>
+                    <div class="brand_item">
+                        <img src="img/logos/Walmart.svg" alt="Brand Logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Brand section Part End -->
 </body>
 </html>
