--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div> <!-- Container -->
     </header> <!-- Header_section_m -->
     <!-- Header Part End -->
+
     <!-- Header_banner Part Start -->
     <section class="h_banner_section">
         <div class="container">
@@ -49,16 +50,16 @@
                         <h1 class="banner_title">Start your Journey as Influencer</h1>
                         <p class="banner_para">Of course everyone's audience is different, but I know that sharing humor and staying relatable is what increases the likelihood of success for my captions.</p>
                         <a href="#" class="banner_btn btn">pre-order now <i class="fas fa-arrow-right"></i></a>
-                    </div>
+                    </div> <!-- banner_text -->
                     <div class="banner_img">
                         <img src="img/product/main-camera.png" alt="camrea">
                         <!-- <div class="circle_1"></div>
                         <div class="circle_2"></div> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                    </div> <!-- banner_img -->
+                </div> <!-- Banner content -->
+            </div> <!-- Row -->
+        </div> <!-- container -->
+    </section> <!-- h_banner_section -->
     <!-- Header_banner Part End -->
 
     <!-- Brand section Part Start -->
@@ -86,11 +87,206 @@
                     </div>
                     <div class="brand_item">
                         <img src="img/logos/Walmart.svg" alt="Brand Logo">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                    </div> <!-- brand_item -->
+                </div> <!-- Brand content -->
+            </div> <!-- Row -->
+        </div> <!-- Container -->
+    </section> <!-- Brand Section -->
     <!-- Brand section Part End -->
+
+    <!-- Collection section Part Start -->
+    <section class="collection_section">
+        <div class="container">
+            <div class="row">
+                <h2 class="collection_title">popular collection</h2>
+            </div> <!-- Row -->
+            <div class="row">
+                <div class="collection_content">
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/tripod.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">flex tripod</h4>
+                            <span class="item_price">$ 50.48</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/mic.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">microphone</h4>
+                            <span class="item_price">$ 120.25</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/airpod.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">airbuds</h4>
+                            <span class="item_price">$ 100.00</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/drone.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">drone</h4>
+                            <span class="item_price">$ 980.25</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/lights.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">light setup</h4>
+                            <span class="item_price">$ 1200.00</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/setup.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">photoshort set</h4>
+                            <span class="item_price">$ 820.40</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/camera.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">blogging camrea</h4>
+                            <span class="item_price">$ 1800.00</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/single-light.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">green screen</h4>
+                            <span class="item_price">$ 25.48</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                    <div class="collection_item">
+                        <div class="C_item_img">
+                            <img src="img/product/action.png" alt="Tripod">
+                        </div>
+                        <div class="C_item_info">
+                            <h4 class="C_item_info_title">action camrea</h4>
+                            <span class="item_price">$ 380.00</span>
+                            <div class="item_ratting">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half"></i>
+                                <span>4.99</span>
+                            </div>
+                            <p class="item_para">worldwide shifting</p>
+                            <p class="item_para">available</p>
+                            <p class="item_para">buyer protection possible</p>
+                        </div>
+                    </div> <!-- Collection_item -->
+                </div> <!-- Collection_content -->
+                <a href="#" class="item_more">see more <i class="fas fa-arrow-right"></i></a>
+            </div> <!-- Row -->
+        </div> <!-- Container -->
+    </section> <!-- Collection_section -->
+    <!-- Collection section Part End -->
 </body>
 </html>
