--- a/index.html
+++ b/index.html
@@ -288,5 +288,24 @@
         </div> <!-- Container -->
     </section> <!-- Collection_section -->
     <!-- Collection section Part End -->
+
+    <!-- Footer part Start -->
+    <footer class="footer_section">
+        <div class="footer_content">
+            <h3 class="footer_title">inflencer startup</h3>
+            <p class="footer_para">Copyright &copy 2022  influencer startup</p>
+            <p class="footer_para">All rights reserved</p>
+            <div class="social_link">
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div> <!-- footer content -->
+    </footer> <!-- footer section -->
+    <!-- Footer part End -->
+
 </body>
 </html>
