--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Css Link -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <!-- Header Part Start -->
@@ -46,12 +47,12 @@
         <div class="container">
             <div class="row">
                 <div class="banner_content">
-                    <div class="banner_text">
+                    <div class="banner_text item1">
                         <h1 class="banner_title">Start your Journey as Influencer</h1>
                         <p class="banner_para">Of course everyone's audience is different, but I know that sharing humor and staying relatable is what increases the likelihood of success for my captions.</p>
                         <a href="#" class="banner_btn btn">pre-order now <i class="fas fa-arrow-right"></i></a>
                     </div> <!-- banner_text -->
-                    <div class="banner_img">
+                    <div class="banner_img item2">
                         <img src="img/product/main-camera.png" alt="camrea">
                         <!-- <div class="circle_1"></div>
                         <div class="circle_2"></div> -->
@@ -291,19 +292,23 @@
 
     <!-- Footer part Start -->
     <footer class="footer_section">
-        <div class="footer_content">
-            <h3 class="footer_title">inflencer startup</h3>
-            <p class="footer_para">Copyright &copy 2022  influencer startup</p>
-            <p class="footer_para">All rights reserved</p>
-            <div class="social_link">
-                <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
+        <div class="container">
+            <div class="row">
+                <div class="footer_content">
+                    <h3 class="footer_title">inflencer startup</h3>
+                    <p class="footer_para">Copyright &copy 2022  influencer startup</p>
+                    <p class="footer_para">All rights reserved</p>
+                    <div class="social_link">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div> <!-- footer content -->
             </div>
-        </div> <!-- footer content -->
+        </div>
     </footer> <!-- footer section -->
     <!-- Footer part End -->
 
