Full responsive website

--- a/index.html
+++ b/index.html
@@ -289,6 +289,36 @@
         </div> <!-- Container -->
     </section> <!-- Collection_section -->
     <!-- Collection section Part End -->
+    
+    <!-- Contect part Start -->
+    <section class="contect_section">
+        <div class="container">
+            <div class="row">
+                <div class="contect_main">
+                    <div class="content_img">
+                        <img src="img/contect_us.png" alt="contect">
+                    </div>
+                    <div class="contect_info">
+                        <h6 class="contect_Subtitle">contact us</h6>
+                        <h2 class="contect_title">Got any questions? Don't hesitate to get in touch.</h2>
+                        <div class="contect_details">
+                            <h6 class="contect_d_subtile">Address</h6>
+                            <p class="contect_para">Moonshine St. 14/05 Light City, London</p>
+                        </div>
+                        <div class="contect_details">
+                            <h6 class="contect_d_subtile">Phone</h6>
+                            <p class="contect_para">00 (123) 456 78 90</p>
+                        </div>
+                        <div class="contect_details">
+                            <h6 class="contect_d_subtile">E-mail</h6>
+                            <p class="contect_para">sandbox@email.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contect part End -->
 
     <!-- Footer part Start -->
     <footer class="footer_section">
@@ -311,6 +341,5 @@
         </div>
     </footer> <!-- footer section -->
     <!-- Footer part End -->
-
 </body>
 </html>
