banner img background problem solved

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <a href="#" class="banner_btn btn">pre-order now <i class="fas fa-arrow-right"></i></a>
                     </div> <!-- banner_text -->
                     <div class="banner_img item2">
-                        <img src="img/product/main-camera.png" alt="camrea">
-                        <!-- <div class="circle_1"></div>
-                        <div class="circle_2"></div> -->
+                        <div class="circle_1"></div>
+                        <div class="circle_2"></div>
+                        <div class="banner_img_item"></div>
                     </div> <!-- banner_img -->
                 </div> <!-- Banner content -->
             </div> <!-- Row -->
